[gd_scene load_steps=5 format=3 uid="uid://bs1nvi53ahd5x"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_ds7n4"]
[ext_resource type="FontFile" uid="uid://dbugthsaoxno" path="res://Dyslexie Regular LP218125.ttf" id="2_rigwx"]
[ext_resource type="Texture2D" uid="uid://dooyltyvi8ksi" path="res://Art/logo.png" id="3_jv3vk"]
[ext_resource type="PackedScene" uid="uid://bsgjdyv2fouhg" path="res://scene_change.tscn" id="4_mluxf"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_ds7n4")

[node name="StartGame" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -54.0
offset_top = -139.0
offset_right = 46.0
offset_bottom = -108.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
text = "Start Game!"

[node name="CreditsButton" type="Button" parent="."]
offset_left = 454.0
offset_top = 482.0
offset_right = 563.0
offset_bottom = 513.0
size_flags_horizontal = 4
text = "Show Credits"

[node name="CreditsText" type="Label" parent="."]
offset_left = 255.0
offset_top = 133.0
offset_right = 763.0
offset_bottom = 418.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_rigwx")
text = "Coding - 
Art - 
Ideas - 
Assets - "

[node name="Logo" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(512, 288)
scale = Vector2(1.56575, 1.08271)
texture = ExtResource("3_jv3vk")

[node name="SceneChange" parent="." instance=ExtResource("4_mluxf")]

[connection signal="pressed" from="StartGame" to="." method="new_game"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_pressed"]
